--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class = "btm_nav">  
             <div class = "circular_btn border" id = "exploreButtonContainer">
                 <div class = "center_btn" id = "exploreButton"> 
-                    <button class = "button_type_1" id = "exploreBtn" onclick = "dreamEntryPage();"> <img src = "images/dc_button.svg"> </button>
+                    <button class = "button_type_1" id = "exploreBtn" onclick = "dreamEntryPage();"> <img src = "../images/dc_button.svg"> </button>
                     <!-- <button class = "button_type_1" id = "exploreBtn" onclick = "dreamEntryPage();"> Explore </button> -->
                 </div>
             </div>
