--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <div class = "circular_btn border" id = "catch">
                         <div class = "center_btn" >
                         <!-- <input class = "button_type_1" id = "catchDream" type = "button" value = "Catch your Dream" onclick = "startSurvey();"/>  -->
-                            <button class = "button_type_1" id = "catchDream" onclick = "startSurvey();"><img src = "images/dc_button.SVG"> </button>
+                            <button class = "button_type_1" id = "catchDream" onclick = "startSurvey();"><img src = "../images/dc_button.SVG"> </button>
                          </div>
                     </div>
                     <div class = "nav_text_container2"><div class = "nav_text2"> Catch Your Dream</div></div>
