hide scroll bar + empty textarea on click

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class = "align_center" id = "dreamTextContainer">
                 <div>
                 <label for="dream"></label>
-                <textarea id = "dream" name="mydream" rows= "12" cols = "65" maxlength="1000">Write about your dream here</textarea>  
+                <textarea id = "dream" name="mydream" rows= "12" cols = "65" maxlength="1000" onclick="emptyDefaultText();">Write about your dream here</textarea>  
                 </div>
 
                 <div class = "btm_nav">
