--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
         <div class = "align_center" id = "dreamTextContainer">
                 <div>
                 <label for="dream"></label>
-                <textarea id = "dream" name="mydream" rows= "12" cols = "65" maxlength="1000" onclick="emptyDefaultText();">Write about your dream here</textarea>  
+                <textarea id = "dream" name="mydream" maxlength="1000" onclick="emptyDefaultText();">Write about your dream here</textarea>  
+                <!-- rows= "12" cols = "65" -->
                 </div>
 
                 <div class = "btm_nav">
